<resources>
    <string name="app_name">GroupStudyAppMAD</string>
    <string name="studyingappname">Group Study</string>
    <string name="getstartbtn">Get Started</string>
    <string name="appdescription">Get Connected with friends\nand enhance your career</string>
    <string name="loginlabel">"Login : "</string>
    <string name="loginemaillabel">"Email : "</string>
    <string name="editloginmail">Enter the mail address</string>
    <string name="loginpasswordlabel">"Password : "</string>
    <string name="editloginpassword">Enter password</string>
    <string name="loginbutton">LOGIN</string>
    <string name="donothaveAccount">Do not have Account?</string>
    <string name="signuploginbtn">SignUp</string>
    <string name="giveusernamelabel">Give username :</string>
    <string name="giveemaillabel">Give Email address :</string>
    <string name="givepasswordlabel">Give Password :</string>
    <string name="givephonelabel">"Give Phone Number : "</string>
    <string name="editgiveusername">Enter Username :</string>
    <string name="editgivemail">"Enter mail address : "</string>
    <string name="editgivepassword">Enter password</string>
    <string name="editgivephone">Enter phone number :</string>
    <string name="signupbutton">SIGNUP</string>
    <string name="dashboardlabel">Dashboard</string>
    <string name="myprofiledashbutton">My Profile</string>
    <string name="mygroupsdashbtn">My Groups</string>
    <string name="creategroupdashbtn">Create Group</string>
    <string name="logoutdashbtn">LOGOUT</string>
    <string name="navigation1">Home</string>
    <string name="navigation2">NewGroup</string>
    <string name="navigation3">MyGroups</string>
    <string name="navigation4">MyProfile</string>
    <string name="mygroupsheading">My Groups</string>
    <string name="course1">C / C++</string>
    <string name="course2">JAVA</string>
    <string name="course3">HTML, CSS</string>
    <string name="course4">MERN</string>
    <string name="course5">MAD</string>
    <string name="course6">OOC</string>
    <string name="aaddcoursebutton">+</string>
    <string name="createGroupheading">Create Group</string>
    <string name="groupnamelabel">Group Name :</string>
    <string name="coursenamelabel">Course Name :</string>
    <string name="editentergroupname">Enter group name</string>
    <string name="editentercoursename">Enter Course Name</string>
    <string name="creategroupbtn">Create Group</string>
    <string name="profilenamelabel">Arthur Morgan</string>
    <string name="followerslabel">Connects</string>
    <string name="mycourseslabelpro">My Cources</string>
    <string name="followinglabel">Following</string>
    <string name="followerscount">20</string>
    <string name="coursescount">4</string>
    <string name="followingcount">100</string>
    <string name="mailaddressprofilelabel">morgan@gmail.com</string>
    <string name="phoneprofilelabel">+94 71 111 1111</string>
    <string name="commentsprofilelabel">All Comments</string>
    <string name="profilelogoutbtn">LOGOUT</string>
</resources>